Atualização para inserir foto e personalização no css

--- a/Index.html
+++ b/Index.html
@@ -19,16 +19,18 @@
         <div class="Sobre">
             <h1 id="sobreTitulo">Sobre</h1>
             <p id="sobreTexto">
-                Texto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobre<br>
-                Texto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobre<br>
-                Texto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobre<br><br>
-                Texto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobre<br>
-                Texto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobreTexto sobre<br>
+                Arquiteta formada na Universidade Federal de Alagoas com experiência <br>
+                em projetos arquitetônicos, reformas e interiores, atuando na Ornare e <br>
+                Dalila Cabral Arquitetura. Proficiente em Sketchup, V-Ray, Revit, AutoCAD <br>
+                e QGIS. Busco uma posição para desenvolver soluções inovadoras <br>
+                e funcionais na área de arquitetura.
 
             </p>
-            <!-- <img src="./Imgs/Cath.png" alt="" srcset="">
+                <div>
+                    <img class="Foto" src="./Imgs/Cath.png" alt="" srcset="">
+                </div>
         </div>
-    </section>
+    <!-- </section>
     <section>
         <div class="ImagensHistoria">
             <img class="ImagemCarrossel" src="./Imgs/image.png" alt="Imagem 1">
