Alterações no html e css, para ajuste de foto e sobre

--- a/Index.html
+++ b/Index.html
@@ -15,21 +15,23 @@
             <h4>Contato</h4>
         </div>
     </header>
-    <section > <!--Sobre a pessoa-->
+    <section> <!--Sobre a pessoa-->
         <div class="Sobre">
             <h1 id="sobreTitulo">Sobre</h1>
-            <p id="sobreTexto">
-                Arquiteta formada na Universidade Federal de Alagoas com experiência <br>
-                em projetos arquitetônicos, reformas e interiores, atuando na Ornare e <br>
-                Dalila Cabral Arquitetura. Proficiente em Sketchup, V-Ray, Revit, AutoCAD <br>
-                e QGIS. Busco uma posição para desenvolver soluções inovadoras <br>
-                e funcionais na área de arquitetura.
-
-            </p>
+            <div class="SobreConteudo">
+                <p id="sobreTexto">
+                    Arquiteta formada na Universidade Federal de Alagoas com experiência <br>
+                    em projetos arquitetônicos, reformas e interiores, atuando na Ornare e <br>
+                    Dalila Cabral Arquitetura. Proficiente em Sketchup, V-Ray, Revit, AutoCAD <br>
+                    e QGIS. Busco uma posição para desenvolver soluções inovadoras <br>
+                    e funcionais na área de arquitetura.
+                </p>
                 <div>
                     <img class="Foto" src="./Imgs/Cath.png" alt="" srcset="">
                 </div>
+            </div>
         </div>
+    </section>
     <!-- </section>
     <section>
         <div class="ImagensHistoria">
